[README] readme updated